# mantid_total_scattering

./: .codacy.yml  .gitattributes  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Pipfile  README.md  codecov.yml  input.json  mantid_total_scattering.py  mts  pdf_plotter.py  pg3.json  pycharm.md  pyproject.toml  requirements-conda.txt  requirements-dev-conda.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  total_scattering_mantid.py  tox.ini  wrapper_pyproject.toml
.ci/: Dockerfile.nightly_ubuntu16.04  Dockerfile.nightly_ubuntu16.04_python3  Dockerfile.test  construct_test_command.sh  setup_ci_container_locally.sh
.github/workflows/: actions.yml  ornl-trigger.yml  package.yaml  test_and_deploy.yaml  unittest.yaml
conda.recipe/: anaconda_upload.sh  conda_upload.sh  meta.yaml
conda.recipe/mantid-total-scattering/: meta.yaml
conda.recipe/mantid-total-scattering-python-wrapper/: meta.yaml
docker/: Dockerfile.test
dockerfiles/: Mantid_Dockerfile  POLARIS9fbf7121b4274c833043ae8933ec643ff7b9313d.vtp
examples/isis/: polaris.json
examples/sns/: NOM_144975.nxs  nomad_ResonanceFilter.json  nomad_SrTiO3.expt  nomad_SrTiO3.json  nomad_cal.h5  nomad_ceria.expt  nomad_ceria.json  nomad_grouping.json  nomad_simple.json  pg3_lab6.json
file_handling/: load.py  save.py
file_handling/test/: test_load.py  test_save.py
inelastic/: .placzek.py.swp  incident_spectrum.py  placzek.py
isis/polaris/: character.txt  generate_input.py  input.json
pdf_plotter/io/: nexus_load.py
pdf_plotter/ui/: control_panel.py  controls.py  editors.py  models.py
pdf_plotter/ui/nodes/: base_node.py  corrected_datasets.py  dataset.py
pdf_plotter/utils/: instrument_filters.py  mpl_utilities.py
polaris/: grouping_polaris.cal  input_polaris_silicon.json  windows_driver_script.bat
sns/: nomad.json  pg3.json  pg3_lab6.json
sns/groupings/: nomad_group_16_8_masked.xml
system_tests/: polaris_system_test.py  test_polaris.py
test_data/: tiny-data-file.nxs
testing/: character_polaris.txt  input_polaris_silicon.json
tests/: __init__.py  test_utils.py  utils.py
tests/autogrouping/: test_autogrouping.py  test_similarity.py
tests/data/: NOM_144976.nxs  NOM_144977.nxs  NOM_144992.nxs  POLARIS00097947-min.nxs  remote_files.json  remote_files.py
tests/file_handling/: test_configure_geometry.py  test_load.py  test_save.py
tests/system/: polaris.py  test_nomad.py
tests/total_scattering/: test_normalizations.py  test_utils.py  test_validator.py
tests/total_scattering/autogrouping/: test_similarity.py
tests/total_scattering/inelastic/: test_incident_spectrum.py
total_scattering/: __init__.py  _version.py  cli.py  params.py  utils.py
total_scattering/autogrouping/: autogrouping.py  similarity.py  utils.py
total_scattering/file_handling/: load.py  save.py
total_scattering/finddata/: __init__.py  _version.py  publish_plot.py
total_scattering/inelastic/: incident_spectrum.py  placzek.py
total_scattering/isis/polaris/: config.cfg  generate_input.py
total_scattering/reduction/: __init__.py  normalizations.py  total_scattering_reduction.py  validator.py
